--- a/examples/PyFunctional-pandas-tutorial.ipynb
+++ b/examples/PyFunctional-pandas-tutorial.ipynb
@@ -152,7 +152,7 @@
    ],
    "source": [
     "# Load the initial data using pandas, possibly do some work in pandas\n",
-    "df = pd.read_csv('camping_purchases.csv', header=None)\n",
+    "df = pd.read_csv(\"camping_purchases.csv\", header=None)\n",
     "df"
    ]
   },
@@ -256,7 +256,7 @@
    ],
    "source": [
     "# Show representation using PyFunctional's csv parsing\n",
-    "seq.csv('camping_purchases.csv')"
+    "seq.csv(\"camping_purchases.csv\")"
    ]
   },
   {
@@ -286,7 +286,7 @@
    ],
    "source": [
     "# PyFunctional doesn't try to parse the columns, perhaps an area for improvement\n",
-    "seq.csv('camping_purchases.csv').list()"
+    "seq.csv(\"camping_purchases.csv\").list()"
    ]
   },
   {
@@ -316,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
